--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aziz khasyi - Portofolio Website" />
+    <meta name="author" content="Aziz khasyi" />
+    <meta name="keywords" content="Aziz khasyi, Portofolio, Website" />
     <title>Aziz khasyi - Portofolio Website</title>
   </head>
   <body>
