--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Aziz khasyi, Portofolio, Website" />
     <title>Aziz khasyi - Portofolio Website</title>
   </head>
-  <body>
+  <body class="bg-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
