--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aziz khasyi - Portofolio Website" />
+    <meta
+      name="description"
+      content="Welcome to my website. Still in progress!"
+    />
     <meta name="author" content="Aziz khasyi" />
     <meta name="keywords" content="Aziz khasyi, Portofolio, Website" />
+
+    <meta property="og:title" content="Aziz khasyi" />
+    <meta property="og:site_name" content="Aziz khasyi - Portofolio Website" />
+    <meta
+      property="og:description"
+      content="Welcome to my website. Still in progress!"
+    />
     <title>Aziz khasyi - Portofolio Website</title>
   </head>
   <body class="bg-black">
